--- a/November/20201118/20201118.md
+++ b/November/20201118/20201118.md
@@ -17,3 +17,12 @@
 
 5. git常用操作
    1. ·`git init`在目录下创建一个版本库，会生成一个.git隐藏目录。
+   2. 创建版本 `git add 文件`；`git commit -m "版本一"`
+   3. 查看版本记录：`git log`
+   4. 回到以前的版本。`git reset --hard HEAD^`或者`git reset --hard HEAD~1`。其中HEAD表示当前版本，HEAD^或者HEAD~1表示当前版本的前一个版本。若想回到当前版本，可以使用`git reset --hard  版本号`。版本号可以在git reflog查看日志中看见。
+   5. 查看当前工作树上的状态。`git status`
+   6. 丢弃文件的修改：`git checkout --文件名`
+   7. 把暂存区的修改撤销。`git reset HEAD 文件名`，会将文件重新放入到工作区。
+   8. 即工作区想丢弃的修改用`git checkout --文件名`。已经添加到暂存区的文件需要先撤销`git reset HEAD 文件名`撤销到工作区，在做修改。已经提交的文件用`git reset --hard HEAD^`倒退版本。
+   9.  删除文件 `git rm 文件名`  `git commit -m "修改说明 "`。
+   10. `git branch`：查看有哪些分支；`git checkout 分支名`：切换分支名；`git checkouk -b 分支名`：创建并切换该分支。 `git branch 分支名`：创建分支名。合并分支：`git merge 分支名`。删除分支：`git branch -d 分支名`
